--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
@@ -39,6 +39,7 @@
           <div class="row">
             <button class="btn btn-dark btn2" data-bs-toggle="modal" data-bs-target="#CopiarSucursal"
                     (click)="obtenerInformacionItem(item)">Copiar Sucursal</button>
+            <button class="btn btn-dark btn3" data-bs-toggle="modal" data-bs-target="#CopiarSucursal">Eliminar Sucursal</button>
           </div>
         </div>
       </div>
