--- a/FrontEnd/src/app/Administrador/gestion-spa/gestion-spa.component.css
+++ b/FrontEnd/src/app/Administrador/gestion-spa/gestion-spa.component.css
@@ -8,23 +8,24 @@
   margin-left: 10px;
 }
 .container{
-  width: 100%;
-  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+
 }
 
 .margen{
   margin-top: 10px;
-  margin-left: 30px;
-  width: 200px;
+  width: 150px;
 }
 
-.margnes{
-  margin-left: 5%;
-  margin-top: 10px;
-  border-radius: 50px;
-}
 
 .modal{
   background: linear-gradient(65deg, #000000, #641303);
 }
 
+.card{
+  min-height: 450px;
+  max-height: 450px;
+  margin-bottom: 20px;
+}
