--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
@@ -11,11 +11,10 @@
           <div class="row"><h3>Nombre de la sucursal: {{item.nombre}}</h3></div>
           <div class="row"><label>Dirrecion: {{item.provincia}}, {{item.canton}}, {{item.distrito}}</label></div>
           <div class="row"><label>Fecha de Apertura {{item.fechaApertura}}</label></div>
-          <div class="row"><label>Horario de Atencion {{item.horaInicio}}/ {{item.horaFinal}}</label></div>
+          <div class="row"><label>Horario de Atencion {{item.horaInicio}}: 00 / {{item.horaFinal}}: 00</label></div>
 
         </div>
         <div class="col">
-          <div class="row"><label>Empleado Administrador: {{item.nombreAdministrador}}</label></div>
           <div class="row"><label>Capacidad Maxima: {{item.capacidad}}</label></div>
 
         </div>
