--- a/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
@@ -12,26 +12,26 @@
 
       <form>
         <div class="form-group">
-          <select class="form-select input-group" id="tipo" [(ngModel)]="clase.tipo" name="tipo" required  [ngModelOptions]="{standalone: true}">
-            <option *ngFor="let tipo of tiposClase"> {{tipo.tipo}}</option>
+          <select class="form-select input-group" id="servicio" [(ngModel)]="clase.servicio" name="servicio" required  [ngModelOptions]="{standalone: true}">
+            <option *ngFor="let servicio of ServiciosDisponibles" value="{{servicio.id}}"> {{servicio.nombre}}</option>
           </select>
         </div>
 
         <div class="form-group">
-          <select class="form-select input-group" [(ngModel)]="clase.sucursal"  [ngModelOptions]="{standalone: true}" id="exampleFormControlSelect1">
-            <option *ngFor="let sucursal of this.SucursalesDisponibles">{{sucursal.nombre}}</option>
+          <select class="form-select input-group" [(ngModel)]="clase.idSucursal"  [ngModelOptions]="{standalone: true}" id="exampleFormControlSelect1">
+            <option *ngFor="let sucursal of this.SucursalesDisponibles" value="{{sucursal.id}}">{{sucursal.nombre}}</option>
           </select>
         </div>
 
         <div class="form-group input-group">
-          <label for="inicio">Hora inicial</label>
-          <input type="time" name="inicio" class="form-control" [(ngModel)]="clase.inicio" id="inicio"  [ngModelOptions]="{standalone: true}"
+          <label for="inicio">Fecha inicial</label>
+          <input type="date" name="inicio" class="form-control" [(ngModel)]="clase.inicio" id="inicio"  [ngModelOptions]="{standalone: true}"
             placeholder="Inicial">
         </div>
 
         <div class="form-group input-group">
-          <label for="final">Hora final</label>
-          <input type="time" name="final" class="form-control" [(ngModel)]="clase.final" id="final"  [ngModelOptions]="{standalone: true}" placeholder="Final">
+          <label for="final">Fecha final</label>
+          <input type="date" name="final" class="form-control" [(ngModel)]="clase.final" id="final"  [ngModelOptions]="{standalone: true}" placeholder="Final">
         </div>
 
         <button type="submit" (click)="this.buscarClase()" data-bs-toggle="modal"
@@ -39,7 +39,7 @@
 
       </form>
 
-      <button type="button" (click)="this.buscarClase()" class="btn secondary" data-bs-toggle="modal"
+      <button type="button" (click)="this.todasClases()" class="btn secondary" data-bs-toggle="modal"
         data-bs-target="#MostrarClases">Todas las clases</button>
 
 
@@ -67,12 +67,11 @@
 
         </div>
         <div class="modal-body">
-          <div class="card" *ngFor="let clase of this.clases">
-            <img class="card-img-top" src={{clase.imagen}} alt="Card image cap">
+          <div class="card" *ngFor="let clase of this.clasesBusqueda">
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title">{{clase.tipo}}</h5>
+                  <h5 class="card-title">{{clase.nombreServicio}}</h5>
 
                 </div>
                 <div class="col">
@@ -82,7 +81,7 @@
               </div>
               <h6 class="card-subtitle mb-2 text-muted">Horario: {{clase.horaInicio}} - {{clase.horaFin}}</h6>
               <p class="card-text">Se impartirá el día {{clase.fecha}} con una capacidad máxima de {{clase.capacidad}}
-                en la sucursal de {{clase.sucursal}}.</p>
+                en la sucursal de {{clase.nombreSucursal}}.</p>
 
             </div>
           </div>
@@ -104,12 +103,11 @@
 
         </div>
         <div class="modal-body">
-          <div class="card" *ngFor="let clase of this.clases">
-            <img class="card-img-top" src={{clase.imagen}} alt="Card image cap">
+          <div class="card" *ngFor="let clase of this.clasesBusqueda">
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title">{{clase.tipo}}</h5>
+                  <h5 class="card-title">{{clase.nombreServicio}}</h5>
 
                 </div>
                 <div class="col">
@@ -119,7 +117,7 @@
               </div>
               <h6 class="card-subtitle mb-2 text-muted">Horario: {{clase.horaInicio}} - {{clase.horaFin}}</h6>
               <p class="card-text">Se impartirá el día {{clase.fecha}} con una capacidad máxima de {{clase.capacidad}}
-                en la sucursal de {{clase.sucursal}}.</p>
+                en la sucursal de {{clase.nombreSucursal}}.</p>
 
             </div>
           </div>
